--- a/SnapNavigationDemo/SnapNavigationDemo.xcodeproj/project.xcworkspace/xcshareddata/IDETemplateMacros.plist
+++ b/SnapNavigationDemo/SnapNavigationDemo.xcodeproj/project.xcworkspace/xcshareddata/IDETemplateMacros.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>FILEHEADER</key>
 	<string>
-//  SNAP - https://github.com/simonnickel/snap-abstract
+//  SNAP - https://github.com/simonnickel/snap
 //  Created by ___FULLUSERNAME___
 //</string>
 </dict>
